--- a/html/index.html
+++ b/html/index.html
@@ -20,5 +20,5 @@
   </header>
   <script src="../js/app.js" alt="" ></script>
 </body>
-<footer>I am the footer</footer>
+<footer>I am the footer yo</footer>
 </html>
