--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="meyers-reset" href="./css/reset.css" alt="">
-  <link rel="stylesheet" href="/css/styles.css" alt="">
+  <link rel="stylesheet" href="/css/about.css" alt="">
   <title>Travel Fever</title>
 </head>
 <body>
