--- a/html/dest7.html
+++ b/html/dest7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="meyersreset" href="./css/reset.css" alt="">
+  <link rel="stylesheet" href="/css/reset.css" alt="meyers-reset">
   <link rel="stylesheet" href="/css/destinations.css" alt="">
   <title>Travel Fever</title>
 </head>
