--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
       <h1>Vacay Travel Planner</h1>
       <h2>About Us</h2>
       <ul>
-        <li><a href="../html/index.html">Landing Page</a></li>
+        <li><a href="/index.html">Landing Page</a></li>
         <li><a href="../html/saved.html">Saved Destinations</a></li>
         <br>
         <li><a href="../html/dest1.html">Destination-1</a></li>
