--- a/html/about.html
+++ b/html/about.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
   </header>
-  <script src="../js/app.js" alt="" ></script>
+  <script src="./js/app.js" alt="" ></script>
 </body>
 <footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
