--- a/html/saved.html
+++ b/html/saved.html
@@ -14,18 +14,18 @@
       <h2>Saved Destinations</h2>
       <ul>
         <li><a href="/index.html">Landing Page</a></li>
-        <li><a href="../html/saved.html">Saved Destinations</a></li>
+        <li><a href="/html/saved.html">Saved Destinations</a></li>
         <br>
-        <li><a href="../html/dest1.html">Destination-1</a></li>
-        <li><a href="../html/dest2.html">Destination-2</a></li>
-        <li><a href="../html/dest3.html">Destination-3</a></li>
-        <li><a href="../html/dest4.html">Destination-4</a></li>
-        <li><a href="../html/dest5.html">Destination-5</a></li>
-        <li><a href="../html/dest6.html">Destination-6</a></li>
-        <li><a href="../html/dest7.html">Destination-7</a></li>
-        <li><a href="../html/dest8.html">Destination-8</a></li>
+        <li><a href="/html/dest1.html">Destination-1</a></li>
+        <li><a href="/html/dest2.html">Destination-2</a></li>
+        <li><a href="/html/dest3.html">Destination-3</a></li>
+        <li><a href="/html/dest4.html">Destination-4</a></li>
+        <li><a href="/html/dest5.html">Destination-5</a></li>
+        <li><a href="/html/dest6.html">Destination-6</a></li>
+        <li><a href="/html/dest7.html">Destination-7</a></li>
+        <li><a href="/html/dest8.html">Destination-8</a></li>
         <br>
-        <li><a href="../html/about.html">About Us</a></li>
+        <li><a href="/html/about.html">About Us</a></li>
       </ul>
     </nav>
   </header>
