About me HTML scaffolding

--- a/html/about.html
+++ b/html/about.html
@@ -10,9 +10,7 @@
 <body>
   <header>
     <nav>
-      <h1>Vacay Travel Planner</h1>
-      <h2>About Us</h2>
-      <ul>
+      <!-- <ul>
         <li><a href="/index.html">Landing Page</a></li>
         <li><a href="../html/saved.html">Saved Destinations</a></li>
         <br>
@@ -26,10 +24,26 @@
         <li><a href="../html/dest8.html">Destination-8</a></li>
         <br>
         <li><a href="../html/about.html">About Us</a></li>
-      </ul>
+      </ul> -->
     </nav>
   </header>
+
+  <h1>Team VACAY</h1>
+
+  <img src="https://placehold.it/100x100/ddd">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+
+  <img src="https://placehold.it/100x100/ddd">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+
+  <img src="https://placehold.it/100x100/ddd">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+
+  <img src="https://placehold.it/100x100/ddd">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+
   <script src="./js/app.js" alt="" ></script>
 </body>
+
 <footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
