--- a/html/dest1.html
+++ b/html/dest1.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" alt="">
-  <link rel="stylesheet" href="/css/destinations.css" alt="">
+  <link rel="stylesheet" href="../css/reset.css" alt="">
+  <link rel="stylesheet" href="../css/destinations.css" alt="">
   <title>Travel Fever</title>
 </head>
 <body>
   <header>
     <nav>
       
-      <button><a href="/index.html">Back to Home</a></button>
+      <button><a href="../index.html">Back to Home</a></button>
       <img src="https://placehold.it/100x75/ddd" alt="logo">
       <!-- <ul>
         <li><a href="../html/saved.html">Saved Destinations</a></li>
