team discussion fixes

--- a/html/dest1.html
+++ b/html/dest1.html
@@ -62,5 +62,8 @@
   </main>
   <script src="../js/app.js" alt="" ></script>
 </body>
-<footer>&copy;Vacay Travel Planner 2020 </footer>
+<footer>
+  <link> <a href="../html/about.html">Meet The Team</a></link>
+  &copy;Vacay Travel Planner 2020 
+</footer>
 </html>
