saving landing page and saved destination HTML

--- a/index.html
+++ b/index.html
@@ -3,33 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/reset.css" alt="meyers-reset">
-  <link rel="stylesheet" href="./css/styles.css" alt="">
-  <title>Travel Fever</title>
+  <link rel="stylesheet" href="./css/reset.css" type="css/text">
+  <link rel="stylesheet" href="./css/styles.css" type="css/text">
+  <title>Vacay Travel Planner</title>
 </head>
 <body>
   <header>
     <nav>
-      <h1>Vacay Travel Planner</h1>
-      <h2>Landing Page</h2>
-      <ul>
-        <!-- <li><a href="/index.html">Landing Page</a></li> -->
-        <li><a href="./html/saved.html">Saved Destinations</a></li>
-        <br>
-        <li><a href="./html/dest1.html">Destination-1</a></li>
-        <li><a href="./html/dest2.html">Destination-2</a></li>
-        <li><a href="./html/dest3.html">Destination-3</a></li>
-        <li><a href="./html/dest4.html">Destination-4</a></li>
-        <li><a href="./html/dest5.html">Destination-5</a></li>
-        <li><a href="./html/dest6.html">Destination-6</a></li>
-        <li><a href="./html/dest7.html">Destination-7</a></li>
-        <li><a href="./html/dest8.html">Destination-8</a></li>
-        <br>
-        <li><a href="./html/about.html">About Us</a></li>
-      </ul>
+      <button> <a href="./html/saved.html">See Saved Destinations</a></button>
+      <!-- dropdown menus will go here! -->
+      <form>
+        <label>Destinations</label>
+          <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
+              <option> <a href="./html/dest1.html">Destination-1</a></option>
+              <option value="Destination-2">Destination Two</option>
+              <option value="Destination-3">Destination Three</option>
+              <option value="Destination-4">Destination Four</option>
+              <option value="Destination-5">Destination Five</option>
+              <option value="Destination-6">Destination Six</option>
+              <option value="Destination-7">Destination Seven</option>
+              <option value="Destination-8">Destination Eight</option>
+          </select>
+        <input id="submit" type="submit" value="submit"/>
+      </form>
+      <!-- <form>
+        <label>Browse By Category</label>
+          <select id="dest" name="dest">
+              <option value="Snow">Snow</option>
+              <option value="Sun">Sun</option>
+          </select>
+      </form> STRETCH GOAL!!!  -->
     </nav>
   </header>
+  <main>
+    <section id = "hero-image">
+<!-- eye candy -->
+      <p>
+        <h1>Welcome To Your Next Vacation!</h1>
+      </p>
+    </section>
+    <section id = "criteria">
+<!-- criteria options -->
+      <img src="./img/snow-thumbnail.jpg" class="thumbnail">
+      <img src="./img/sun-thumbnail.jpg" class="thumbnail">
+    </section>
+    <section>
+      <!-- paragraph and submit -->
+      <p>
+        <h3>Do You Prefer Sun? Or Snow? (Click One)</h3>
+      </p>
+      <button type="submit">Submit</button>
+    </section>
+  </main>
+  <footer>
+    <link> <a href="./html/about.html">Meet The Team</a></link>
+    &copy;Vacay Travel Planner 2020 </footer>
   <script src="./js/app.js" alt="" ></script>
 </body>
-<footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
