--- a/html/about.html
+++ b/html/about.html
@@ -45,5 +45,8 @@
   <script src="./js/app.js" alt="" ></script>
 </body>
 
-<footer>&copy;Vacay Travel Planner 2020 </footer>
+<footer>
+  <link> <a href="../html/about.html">Meet The Team</a></link>
+  &copy;Vacay Travel Planner 2020 
+</footer>
 </html>
