--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/reset.css" type="css/text">
-  <link rel="stylesheet" href="./css/styles.css" type="css/text">
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./css/styles.css" type="text/css">
   <title>Vacay Travel Planner</title>
 </head>
 <body>
   <header>
+    <button id = "see-saved-button"> <a href="./html/saved.html">See Saved Destinations</a></button>
     <nav>
-      <button> <a href="./html/saved.html">See Saved Destinations</a></button>
       <!-- dropdown menus will go here! -->
       <form>
-        <label>Destinations</label>
+        <!-- <label>Destinations</label> -->
           <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
-              <option> <a href="./html/dest1.html">Destination-1</a></option>
-              <option value="Destination-2">Destination Two</option>
-              <option value="Destination-3">Destination Three</option>
+              <option value="">Destinations</option>
+              <option value="Los-Angeles">Los Angeles</option>
+              <option value="Granada">Granada</option>
+              <option value="Phuket">Phuket</option>
               <option value="Destination-4">Destination Four</option>
-              <option value="Destination-5">Destination Five</option>
-              <option value="Destination-6">Destination Six</option>
-              <option value="Destination-7">Destination Seven</option>
+              <option value="Telluride">Telluride</option>
+              <option value="Zermatt">Zermatt</option>
+              <option value="Tramso">Tramsø</option>
               <option value="Destination-8">Destination Eight</option>
           </select>
-        <input id="submit" type="submit" value="submit"/>
+       <input id="click" type="click" value="click"/>  <!-- need to get rid of submit box -->
       </form>
       <!-- <form>
         <label>Browse By Category</label>
@@ -36,28 +37,58 @@
     </nav>
   </header>
   <main>
-    <section id = "hero-image">
+    <section id = "hero-image" >
 <!-- eye candy -->
-      <p>
         <h1>Welcome To Your Next Vacation!</h1>
-      </p>
     </section>
+
+    <hr>
+    <hr>
+
     <section id = "criteria">
 <!-- criteria options -->
-      <img src="./img/snow-thumbnail.jpg" class="thumbnail">
-      <img src="./img/sun-thumbnail.jpg" class="thumbnail">
+      
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <img src="./img/snow-thumbnail.jpg" class="thumbnail" alt="Snow Picture" title="Snow Picture">
+          </div>
+          <div class="flip-box-back">
+            <h1>Snow</h1>
+            <p>Ski, Hike, Frolic!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-box">
+        <div class="flip-box-inner">
+          <div class="flip-box-front">
+            <img src="./img/sun-thumbnail.jpg" class="thumbnail" alt="Sun Picture" title="Sun Picture"> 
+          </div>
+          <div class="flip-box-back">
+            <h1>Sun</h1>
+            <p>Vitamin D!</p>
+          </div>
+        </div>
+      </div>
+      <!-- <img src="./img/snow-thumbnail.jpg" class="thumbnail" alt="Snow Picture" title="Snow Picture">
+      <img src="./img/sun-thumbnail.jpg" class="thumbnail" alt="Sun Picture" title="Sun Picture">  -->
+
     </section>
-    <section>
+    <section id="select-explain">
       <!-- paragraph and submit -->
       <p>
         <h3>Do You Prefer Sun? Or Snow? (Click One)</h3>
       </p>
-      <button type="submit">Submit</button>
+      <button type="submit" id="submit-button"><a>Submit</a></button>
     </section>
   </main>
   <footer>
-    <link> <a href="./html/about.html">Meet The Team</a></link>
-    &copy;Vacay Travel Planner 2020 </footer>
+      <a href="./html/about.html">Meet The Team</a><br>
+      &copy;Vacay Travel Planner 2020
+    
+   
+  </footer>
   <script src="./js/app.js" alt="" ></script>
 </body>
 </html>
