destination names updated

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
               <option value="Los-Angeles">Los Angeles</option>
               <option value="Granada">Granada</option>
               <option value="Phuket">Phuket</option>
-              <option value="Destination-4">Destination Four</option>
+              <option value="Cabo-San-Lucas">Cabo San Lucas</option>
               <option value="Telluride">Telluride</option>
               <option value="Zermatt">Zermatt</option>
               <option value="Tramso">Tramsø</option>
-              <option value="Destination-8">Destination Eight</option>
+              <option value="Stowe">Stowe</option>
           </select>
        <input id="click" type="click" value="click"/>  <!-- need to get rid of submit box -->
       </form>
