landing page css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <button id = "see-saved-button"> <a href="./html/saved.html">See Saved Destinations</a></button>
+    <button id = "see-saved-button"> <a href="./html/saved.html">See Saved Destinations</button>
     <nav>
       <!-- dropdown menus will go here! -->
       <form>
@@ -63,7 +63,7 @@
       <div class="flip-box">
         <div class="flip-box-inner">
           <div class="flip-box-front">
-            <img src="./img/sun-thumbnail.jpg" class="thumbnail" alt="Sun Picture" title="Sun Picture"> 
+            <img src="./img/beach-walk.jpg" class="thumbnail" alt="Sun Picture" title="Sun Picture"> 
           </div>
           <div class="flip-box-back">
             <h1>Sun</h1>
@@ -78,14 +78,14 @@
     <section id="select-explain">
       <!-- paragraph and submit -->
       <p>
-        <h3>Do You Prefer Sun? Or Snow? (Click One)</h3>
+        <h3>Do You Prefer Snow? Or Sun? (Click One)</h3>
       </p>
       <button type="submit" id="submit-button"><a>Submit</a></button>
     </section>
   </main>
   <footer>
       <a href="./html/about.html">Meet The Team</a><br>
-      &copy;Vacay Travel Planner 2020
+      <p>&copy;Vacay Travel Planner 2020</p> 
     
    
   </footer>
