landing page styling finalized

--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 </head>
 <body>
   <header>
-    <button id = "see-saved-button"> <a href="./html/saved.html">See Saved Destinations</button>
+    <button id = "see-saved-button"> <a href="./html/saved.html">See Saved Destinations</a></button>
     <nav>
       <!-- dropdown menus will go here! -->
       <form>
         <!-- <label>Destinations</label> -->
           <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
-              <option value="">Destinations</option>
-              <option value="Los-Angeles">Los Angeles</option>
-              <option value="Granada">Granada</option>
-              <option value="Phuket">Phuket</option>
+              <!-- <option value="" id = "placeholder">Destinations</option> -->
               <option value="Cabo-San-Lucas">Cabo San Lucas</option>
-              <option value="Telluride">Telluride</option>
-              <option value="Zermatt">Zermatt</option>
-              <option value="Tramso">Tramsø</option>
+              <option value="Granada">Granada</option>
+              <option value="Los-Angeles">Los Angeles</option>
+              <option value="Phuket">Phuket</option>
+              <option value="">-----------</option>
               <option value="Stowe">Stowe</option>
+              <option value="Telluride">Telluride</option>
+              <option value="Tramso">Tramsø</option>
+              <option value="Zermatt">Zermatt</option>
           </select>
-       <input id="click" type="click" value="click"/>  <!-- need to get rid of submit box -->
+       <!-- <input id="click" type="click" value="click"/>  need to get rid of submit box -->
       </form>
       <!-- <form>
         <label>Browse By Category</label>
