changed back of sun box

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="flip-box-front">
             <img src="./img/beach-walk.jpg" class="thumbnail" alt="Sun Picture" title="Sun Picture"> 
           </div>
-          <div class="flip-box-back">
+          <div class="flip-box-back-2">
             <h1>Sun</h1>
             <p>Vitamin D!</p>
           </div>
