destination bar typo fixed

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <!-- <label>Destinations</label> -->
           <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
               <!-- <option value="" id = "placeholder">Destinations</option> -->
+              <option value="Stowe">Stowe, Vermont</option>
+              <option value="Telluride">Telluride, Colorado</option>
+              <option value="Tramso">Tramsø, Norway</option>
+              <option value="Zermatt">Zermatt, Switzerland</option>
+              <option value="">-----------</option>
               <option value="Cabo-San-Lucas">Cabo San Lucas, Mexico</option>
               <option value="Granada">Granada, Spain</option>
               <option value="Los-Angeles">Los Angeles, California</option>
               <option value="Phuket">Phuket, Thailand</option>
-              <option value="">-----------</option>
-              <option value="Stowe">Stowe, Vermont</option>
-              <option value="Telluride">Telluride, Colorado</option>
-              <option value="Tramso">Tramsø, Norway</option>
-              <option value="Zermatt">Zermat, Switzerland</option>
           </select>
        <!-- <input id="click" type="click" value="click"/>  need to get rid of submit box -->
       </form>
