destination page css except left side temps, etc

--- a/html/saved.html
+++ b/html/saved.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <header>
+
+
+    <!-- testing link -->
+    <a href ="los-angeles.html">LINK TO LOS ANGELES FOR TEST</a>
+
+
     <nav>
       <button> <a href="../index.html">Back To Home</a></button>
       <!-- dropdown menus will go here! -->
