--- a/html/los-angeles.html
+++ b/html/los-angeles.html
@@ -21,6 +21,7 @@
         <!-- <label>Destinations</label> -->
           <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
               <!-- <option value="" id = "placeholder">Destinations</option> -->
+              <option value="">Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
               <option value="Tramso">Tramsø, Norway</option>
@@ -86,7 +87,7 @@
   </main>
   <script src="../js/app.js" alt="" ></script>
   <footer>
-    <a href="./html/about.html">Meet The Team</a>
+    <a href="../html/about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
   </footer>
   
