--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- <label>Destinations</label> -->
           <select id="dest" name="dest"> <!-- NEED TO FIGURE OUT LINKING ON DROPDOWN -->
               <!-- <option value="" id = "placeholder">Destinations</option> -->
+              <option value="">Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
               <option value="Tramso">Tramsø, Norway</option>
