fixed css link in Los Angeles html

--- a/html/los-angeles.html
+++ b/html/los-angeles.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/reset.css" type="text/css">
-  <link rel="stylesheet" href="../css/destinations.css" type="text/css">
+  <link rel="stylesheet" href="../css/Destinations.css" type="text/css">
   <title>Vacay Travel Planner</title>
 </head>
 
