fixed click box issue and did randomizer

--- a/html/los-angeles.html
+++ b/html/los-angeles.html
@@ -82,10 +82,11 @@
       <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
       <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
       </p>
-      <button type = "submit"><a href="../html/saved.html">Save This Destination</a></button>
+      <button type = "submit"><a href="" class="Save Destination">Save This Destination</a></button>
     </article>
   </main>
   <script src="../js/app.js" alt="" ></script>
+  <script src="../js/local-storage.js"></script>
   <footer>
     <a href="../html/about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
