--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
    
   </footer>
   <script src="../js/app.js" alt="" ></script>
-  <script src="../js/local-storage.js"></script>
+  <!-- <script src="../js/local-storage.js"></script> -->
 </body>
 </html>
