Changed file paths for dest pages.html

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     </section>
   </main>
   <footer>
-      <a href="./html/about.html">Meet The Team</a>
+      <a href="./about.html">Meet The Team</a>
       <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
     
    
   </footer>
-  <script src="../js/app.js" alt="" ></script>
+  <script src="./js/app.js" alt="" ></script>
   <!-- <script src="../js/local-storage.js"></script> -->
 </body>
 </html>
