--- a/los-angeles.html
+++ b/los-angeles.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/reset.css" type="text/css">
-  <link rel="stylesheet" href="../css/Destinations.css" type="text/css">
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./css/Destinations.css" type="text/css">
   <title>Vacay Travel Planner</title>
 </head>
 
@@ -12,8 +12,8 @@
 <body class = "sun">
   <div class = "container">
   <header>
-    <a href="../index.html">Back to Home</a>
-    <a href="../html/saved.html">Saved Destinations</a>
+    <a href="./index.html">Back to Home</a>
+    <a href="./saved.html">Saved Destinations</a>
 
     <nav>
       <form>
@@ -72,7 +72,7 @@
     </aside>
     <article>
       <h1 id = "hero">Los Angeles</h1>
-      <img src="../img/los-angeles-sunset.jpg">
+      <img src="./img/los-angeles-sunset.jpg">
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam voluptatem impedit quaerat nulla saepe eum natus pariatur laudantium architecto temporibus similique sapiente est, ab facilis atque nesciunt voluptas expedita? Nisi.
       <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
@@ -82,10 +82,10 @@
       <button type = "submit"><a href="" class="Save Destination">Save This Destination</a></button>
     </article>
   </main>
-  <script src="../js/app.js" alt="" ></script>
-  <script src="../js/local-storage.js"></script>
+  <script src="./js/app.js" alt="" ></script>
+  <script src="./js/local-storage.js"></script>
   <footer>
-    <a href="../html/about.html">Meet The Team</a>
+    <a href="./about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
   </footer>
   
