--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <a href="./html/saved.html">Saved Destinations</a>
-   
+    <a href="./saved.html">Saved Destinations</a>
+    
     <nav>
       <form>
           <select id="dest" name="dest" onchange="dropDownSelection()">
