--- a/los-angeles.html
+++ b/los-angeles.html
@@ -82,7 +82,8 @@
       <a href="" id="Los Angeles" class="save-destination">Save This Destination</a>
     </article>
   </main>
-  <script src="./js/app.js" alt="" ></script>
+  <script src="./js/app.js"></script>
+  <script src="./js/storage.js"></script>
   <footer>
     <a href="./about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
