changed dropdown links; created event listener and getElbyID

--- a/granada.html
+++ b/granada.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" alt="meyers-reset">
   <link rel="stylesheet" href="/css/destinations.css" alt="">
-  <title>Travel Fever</title>
+  <title>Vacay Travel Planner</title>
 </head>
 <body>
+  <a href="" id="Granada" class="save-destination">Save This Destination</a>
+
   <header>
     <nav>
       <h1>Vacay Travel Planner</h1>
