--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    
   </footer>
 
-  <script src="./js/app.js" alt="" ></script>
-  <!-- <script src="../js/local-storage.js"></script> -->
+  <script src="./js/storage.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
