--- a/phuket.html
+++ b/phuket.html
@@ -8,6 +8,8 @@
   <title>Travel Fever</title>
 </head>
 <body>
+  <a href="" id="Phuket" class="save-destination">Save This Destination</a>
+
   <header>
     <nav>
       <h1>Vacay Travel Planner</h1>
