--- a/stowe.html
+++ b/stowe.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <header>
+    <a href="" id="Stowe" class="save-destination">Save This Destination</a>
+
     <nav>
       <h1>Vacay Travel Planner</h1>
       <h2>Destination-7</h2>
@@ -29,7 +31,8 @@
       </ul>
     </nav>
   </header>
-  <script src="../js/app.js" alt="" ></script>
+  <script src="./js/app.js" ></script>
+  <script src="./js/storage.js"></script>
 </body>
 <footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
