--- a/zermatt.html
+++ b/zermatt.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <header>
+    <a href="" id="Zermatt" class="save-destination">Save This Destination</a>
+
     <nav>
       <h1>Vacay Travel Planner</h1>
       <h2>Destination-5</h2>
