--- a/telluride.html
+++ b/telluride.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <header>
+    <a href="" id="Telluride" class="save-destination">Save This Destination</a>
+
     <nav>
       <h1>Vacay Travel Planner</h1>
       <h2>Destination-4</h2>
