--- a/granada.html
+++ b/granada.html
@@ -31,7 +31,8 @@
       </ul>
     </nav>
   </header>
-  <script src="../js/app.js" alt="" ></script>
+  <script src="./js/app.js"></script>
+  <script src="./js/storage.js"></script>
 </body>
 <footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
