Working on local storage retrieval; linked stowe to saved page for testing purposes

--- a/saved.html
+++ b/saved.html
@@ -16,7 +16,7 @@
 
 
     <nav>
-      <button> <a href="../index.html">Back To Home</a></button>
+      <button> <a href="./index.html">Back To Home</a></button>
       <!-- dropdown menus will go here! -->
       <form>
         <label>Destinations</label>
@@ -57,6 +57,8 @@
   <footer>
     <link> <a href="../html/about.html">Meet The Team</a></link>
     &copy;Vacay Travel Planner 2020 </footer>
-  <script src="./js/app.js" alt="" ></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/app.js" alt="" ></script>
+  
 </body>
 </html>
