--- a/stowe.html
+++ b/stowe.html
@@ -15,8 +15,8 @@
       <h1>Vacay Travel Planner</h1>
       <h2>Destination-7</h2>
       <ul>
-        <li><a href="../html/index.html">Landing Page</a></li>
-        <li><a href="../html/saved.html">Saved Destinations</a></li>
+        <li><a href="./index.html">Landing Page</a></li>
+        <li><a href="./saved.html">Saved Destinations</a></li>
         <br>
         <li><a href="../html/dest1.html">Destination-1</a></li>
         <li><a href="../html/dest2.html">Destination-2</a></li>
