LA page styling

--- a/los-angeles.html
+++ b/los-angeles.html
@@ -40,20 +40,37 @@
     </nav>
   </header>
   <main>
-    
-    <aside>
+    <section id = "hero">
+      <h1 >Los Angeles</h1>
+      <img src="./img/los-angeles-sunset-small.jpg" class = "center">
+  </section>
+    <article>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam voluptatem impedit quaerat nulla saepe eum natus pariatur laudantium architecto temporibus similique sapiente est, ab facilis atque nesciunt voluptas expedita? Nisi.
+        <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
+        <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
+        <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
+      </p>
+      <a href="" id="Los Angeles" class="save-destination">Save This Destination</a>
+    </article>
+    <section id = "info-links">
       <section id = "temps">
-        <ul> 
-          <h2>Temps</h2>
-          <li>Fall Temp</li>
+        <h2>Avg Temps</h2>
+        <ul id = "temps-list"> 
           <li>Winter</li>
           <li>Spring</li>
           <li>Summer</li>
+          <li>Fall</li>
+          <li> Hi 78 -- Low 65</li>
+          <li> Hi 78 -- Low 65</li>
+          <li> Hi 78 -- Low 65</li>
+          <li> Hi 78 -- Low 65</li>
+
         </ul>
       </section>
       <section id = "events">
         <ul> 
-          <h2>Events</h2>
+          <h2>Annual Events</h2>
           <li>Event 1</li>
           <li>Event 2</li>
           <li>Event 3</li>
@@ -69,18 +86,7 @@
           <li>Link 4</li>
         </ul>
       </section>
-    </aside>
-    <article>
-      <h1 id = "hero">Los Angeles</h1>
-      <img src="./img/los-angeles-sunset.jpg">
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam voluptatem impedit quaerat nulla saepe eum natus pariatur laudantium architecto temporibus similique sapiente est, ab facilis atque nesciunt voluptas expedita? Nisi.
-      <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
-      <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
-      <br>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aut debitis at aperiam est quia dolor! Amet sit deserunt necessitatibus a, laborum, aperiam magni voluptatibus porro quasi harum facilis molestias.
-      </p>
-      <a href="" id="Los Angeles" class="save-destination">Save This Destination</a>
-    </article>
+    </section>
   </main>
   <script src="./js/app.js"></script>
   <script src="./js/storage.js"></script>
