--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <form>
           <select id="dest" name="dest" onchange="dropDownSelection()">
-              <option value="">Browse Destinations</option>
+              <option value="reset" disabled selected>Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
               <option value="Tramso">Tramsø, Norway</option>
