I am trying to render the saved destinations to the saved html page. I have change userName into an object in order to retrieve the key in retrieving local storage

--- a/saved.html
+++ b/saved.html
@@ -47,6 +47,8 @@
       <p>
         <h1>Ready For One Of These?</h1>
       </p>
+      <!-- TODO: I added this ul to render saved results -->
+      <ul id="destination-list"></ul>
     </section>
     <section id = "saved">
 <!-- need js link to local storage -->
