--- a/about.html
+++ b/about.html
@@ -3,50 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/reset.css" alt="meyers-reset">
-  <link rel="stylesheet" href="../css/about.css" alt="">
-  <title>Travel Fever</title>
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./css/About.css" type="text/css">
+  <title>Vacay Travel Planner</title>
 </head>
 <body>
   <header>
-    <nav>
-      <!-- <ul>
-        <li><a href="/index.html">Landing Page</a></li>
-        <li><a href="../html/saved.html">Saved Destinations</a></li>
-        <br>
-        <li><a href="../html/dest1.html">Destination-1</a></li>
-        <li><a href="../html/dest2.html">Destination-2</a></li>
-        <li><a href="../html/dest3.html">Destination-3</a></li>
-        <li><a href="../html/dest4.html">Destination-4</a></li>
-        <li><a href="../html/dest5.html">Destination-5</a></li>
-        <li><a href="../html/dest6.html">Destination-6</a></li>
-        <li><a href="../html/dest7.html">Destination-7</a></li>
-        <li><a href="../html/dest8.html">Destination-8</a></li>
-        <br>
-        <li><a href="../html/about.html">About Us</a></li>
-      </ul> -->
-    </nav>
+    <img src = "./img/small-sun-icon.png" class = "icon">
+    <h1> Team Vacay</h1>
+    <img src = "./img/small-snow-icon.png" class = "icon">
+
   </header>
 
-  <h1>Team VACAY</h1>
-
-  <img src="https://placehold.it/100x100/ddd">
+  <section class = "member">
+  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figcaption> Ashley Casimir <br> GH: @ashcaz</figcaption>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+  </section>
 
-  <img src="https://placehold.it/100x100/ddd">
+  <section class = "member">
+  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figcaption> Chris Bortel <br> GH: @Chris-Bortel</figcaption>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+  </section>
 
-  <img src="https://placehold.it/100x100/ddd">
+  <section class = "member">
+  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figcaption> Henry Funk <br> GH: @ghenryfunk</figcaption>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+  </section>
 
-  <img src="https://placehold.it/100x100/ddd">
+  <section class = "member">
+  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figcaption> Kim Damalas <br> GH: @kimmyd70</figcaption>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+  </section>
+  
+  <footer>
+    <a href="./index.html">Back to Home</a>
+    <p> &copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
+  </footer>
 
-  <script src="./js/app.js" alt="" ></script>
 </body>
-
-<footer>
-  <link> <a href="../html/about.html">Meet The Team</a></link>
-  &copy;Vacay Travel Planner 2020 
-</footer>
-</html>
+<html>
