meet the team styled and avail content inserted

--- a/about.html
+++ b/about.html
@@ -18,25 +18,63 @@
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
   <figcaption> Ashley Casimir <br> GH: @ashcaz</figcaption>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+    <section class = "pitch">
+      <h3>I Am Ashley -- I'm First Because of the "A" -- I'm Learning Python, Too</h3>
+      <br>  
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex 
+        cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam 
+        ipsa, nihil sint qui quo aperiam voluptatibus est.
+      </p>
+    </section>
   </section>
 
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
   <figcaption> Chris Bortel <br> GH: @Chris-Bortel</figcaption>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+    <section class = "pitch">
+      <h3>I Am Chris -- I Have a Wife -- I Have a Dog -- I Bike and Stuff</h3>
+      <br>  
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex 
+        cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam 
+        ipsa, nihil sint qui quo aperiam voluptatibus est.
+      </p>
+    </section>
   </section>
 
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
   <figcaption> Henry Funk <br> GH: @ghenryfunk</figcaption>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+    <section class = "pitch">
+      <h3>I Am Henry -- I Am Awesome -- I like Outdoors Stuff -- And Stuff</h3>
+      <br>  
+      <p> I worked for years as a Wilderness Guide in the summers, Environmental Educator 
+      in the fall and spring, and Snowboard Instructor in the winter. Life was good. In 
+      search of a more sustainable career path, I made my way back to the Pacific Northwest 
+      to work for Tesla as a sales rep in their Seattle showroom. The office views aren’t nearly 
+      as good, but I’m able to continue working towards a cleaner and greener tomorrow thanks 
+      to Tesla’s unique mission. As more and more people buy Tesla’s products directly through 
+      the website, I long to gain the skills needed to better embrace this ‘online-only’ 
+      purchase culture. I hope to be able to educate many more people about the benefits of 
+      electric transportation and solar energy through web platforms, rather than relying on foot 
+      traffic. Cue CodeFellows!
+      </p>
+    </section>
   </section>
 
   <section class = "member">
-  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figure class = "thumbnail"><img src="./img/beer and pizza.png"></figure>
   <figcaption> Kim Damalas <br> GH: @kimmyd70</figcaption>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam ipsa, nihil sint qui quo aperiam voluptatibus est.</p>
+  
+    <section class = "pitch">
+      <h3>Semi-Retired -- Math Nerd -- Scotch Enthusiast -- Coding Newbie</h3>
+      <br>  
+      <p>I’m a 25-year Air Force veteran who is passionate about social issues, specifically veteran- and
+      economic inequality-centric issues, and I'd like to contribute to solutions in those areas. My 
+      skills and experience  would be well-suited in a small company or team interested in developing 
+      software to help people better process their experiences with combat-related stress, sexual assault, 
+      addiction, violent crime, and other psychologically traumatic events.
+      </p>
+    </section>
   </section>
   
   <footer>
